--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav ul li{
     font-size: 20px;
     margin-bottom: 20px;
 }
-.catagories{
+.categories{
     position: relative;
     display: flex;
     align-items: center;
